--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_map_location_marker: ^7.0.2
   flutter_map_animations: ^0.4.1
   latlong2: ^0.9.0
+  location: ^5.0.3
   rename: ^2.1.1
 dev_dependencies:
   build_runner: ^2.4.5
