--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   latlong2: ^0.9.0
   location: ^5.0.3
   rename: ^2.1.1
-
+  flutter_cache_manager: ^3.3.1
 dev_dependencies:
   build_runner: ^2.4.5
   json_serializable: ^6.7.1
