--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   location: ^5.0.3
   rename: ^2.1.1
   flutter_cache_manager: ^3.3.1
+  http: ^1.1.0
+  animate_do: ^3.0.2
 dev_dependencies:
   build_runner: ^2.4.5
   json_serializable: ^6.7.1
