--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   http: ^1.1.0
   animate_do: ^3.0.2
+  coupon_uikit: ^0.2.0
+  rxdart: ^0.27.7
 dev_dependencies:
   build_runner: ^2.4.5
   json_serializable: ^6.7.1
