--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   flutter_map: ^5.0.0
   flutter_map_location_marker: ^7.0.2
   flutter_map_animations: ^0.4.1
+  flutter_map_marker_cluster:
+    git:
+      url: https://github.com/lpongetti/flutter_map_marker_cluster
+      ref: dee9902
   latlong2: ^0.9.0
   location: ^5.0.3
   rename: ^2.1.1
