--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  supabase_flutter: ^1.10.10
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.7.2
   carousel_slider: ^4.2.1
   faker: ^2.1.0
   url_strategy: ^0.2.0
   badges: ^3.1.1
   another_transformer_page_view: ^2.0.1
   smooth_page_indicator: ^1.1.0
-  #firebase_core: ^2.15.0
-  supabase_flutter: ^1.10.10
-  #firebase_auth: ^4.7.2
+
   collection: ^1.17.0
   freezed_annotation: ^2.0.3
   json_annotation: ^4.8.1
