--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   animate_do: ^3.0.2
   coupon_uikit: ^0.2.0
   rxdart: ^0.27.7
+  cloud_firestore: ^4.8.5
 dev_dependencies:
   build_runner: ^2.4.5
   json_serializable: ^6.7.1
