--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   coupon_uikit: ^0.2.0
   rxdart: ^0.27.7
   cloud_firestore: ^4.8.5
+  fluttertoast: ^8.2.2
 dev_dependencies:
   build_runner: ^2.4.5
   json_serializable: ^6.7.1
