--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   rxdart: ^0.27.7
   cloud_firestore: ^4.8.5
   fluttertoast: ^8.2.2
+  app_settings: ^5.0.0
+  permission_handler: ^10.4.3
 dev_dependencies:
   build_runner: ^2.4.5
   json_serializable: ^6.7.1
