--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   app_settings: ^5.0.0
   permission_handler: ^10.4.3
   sliding_up_panel: ^2.0.0+1
+  geoflutterfire2: ^2.3.15
 dev_dependencies:
   build_runner: ^2.4.5
   json_serializable: ^6.7.1
