--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dartz: ^0.10.1
   scaled_app: ^2.0.0
   flutter_map: ^5.0.0
+  flutter_map_dragmarker: ^5.0.0
   flutter_map_location_marker: ^7.0.2
   flutter_map_animations: ^0.4.1
   flutter_map_marker_cluster:
@@ -61,6 +62,7 @@ dependencies:
   permission_handler: ^10.4.3
   sliding_up_panel: ^2.0.0+1
   geoflutterfire2: ^2.3.15
+  
 dev_dependencies:
   build_runner: ^2.4.5
   json_serializable: ^6.7.1
