--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_map_dragmarker: ^5.0.0
   flutter_map_location_marker: ^7.0.2
   flutter_map_animations: ^0.4.1
+  custom_map_markers: ^0.0.2+1
   flutter_map_marker_cluster:
     git:
       url: https://github.com/lpongetti/flutter_map_marker_cluster
