--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   scaled_app: ^2.0.0
   flutter_map: ^5.0.0
   flutter_map_dragmarker: ^5.0.0
-  flutter_map_location_marker: ^7.0.2
+  
   flutter_map_animations: ^0.4.1
   custom_map_markers: ^0.0.2+1
   flutter_map_marker_cluster:
@@ -50,7 +50,7 @@ dependencies:
       url: https://github.com/lpongetti/flutter_map_marker_cluster
       ref: dee9902
   latlong2: ^0.9.0
-  location: ^5.0.3
+  geolocator: ^10.0.1
   rename: ^2.1.1
   flutter_cache_manager: ^3.3.1
   http: ^1.1.0
