--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_map_marker_cluster: ^1.2.0
   latlong2: ^0.9.0
   geolocator: ^10.0.1
+  geocode: ^1.0.3
   rename: ^2.1.1
   flutter_cache_manager: ^3.3.1
   http: ^1.1.0
