--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "dionniebee",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#FB0400",
-    "theme_color": "#FB0400",
+    "background_color": "#E0163D",
+    "theme_color": "#E0163D",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
