--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,6 @@ dependencies:
   badges: ^3.1.1
   another_transformer_page_view: ^2.0.1
   smooth_page_indicator: ^1.1.0
-
   collection: ^1.17.0
   freezed_annotation: ^2.0.3
   json_annotation: ^4.8.1
@@ -65,6 +64,7 @@ dependencies:
   money2: ^4.0.0
   shared_preferences: ^2.2.2
   animations: ^2.0.10
+  fpdart: ^1.1.0
 
   
 dev_dependencies:
@@ -79,9 +79,6 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.1
   
-  
-  
-
 flutter:
   assets:
     - assets/
