--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
   coupon_uikit: ^0.2.0
   rxdart: ^0.27.7
   cloud_firestore: ^4.8.5
-  oktoast: ^3.4.0
+  fluttertoast: ^8.2.4
   app_settings: ^5.0.0
   permission_handler: ^11.0.1
   sliding_up_panel: ^2.0.0+1
