--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   shared_preferences: ^2.2.2
   animations: ^2.0.8
   fpdart: ^1.1.0
+  firebase_storage: ^11.5.6
   
 
 dev_dependencies:
