--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: dionniebee
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.0.3 <4.0.0'
+  sdk: ">=3.0.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -68,7 +68,7 @@ dependencies:
   animations: ^2.0.8
   fpdart: ^1.1.0
   firebase_storage: ^11.5.6
-  
+  firebase_cached_image: ^0.5.3
 
 dev_dependencies:
   build_runner: ^2.4.5
@@ -81,7 +81,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
-  
+
 flutter:
   assets:
     - assets/
@@ -91,4 +91,3 @@ flutter:
     - assets/icons/
     - google_fonts/
   uses-material-design: true
-
