--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   supabase_flutter: ^2.0.2
-  firebase_core: ^2.15.0
-  firebase_auth: ^4.7.2
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.5
   carousel_slider: ^4.2.1
   faker: ^2.1.0
   url_strategy: ^0.2.0
@@ -41,22 +41,21 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   dartz: ^0.10.1
   scaled_app: ^2.0.0
-  flutter_map: ^5.0.0
-  flutter_map_dragmarker: ^5.0.0
+  flutter_map: ^6.1.0
+  flutter_map_dragmarker: ^6.0.0
   loader_overlay: ^4.0.0
-  flutter_map_animations: ^0.4.1
+  flutter_map_animations: ^0.5.3
   custom_map_markers: ^0.0.2+1
   flutter_map_marker_cluster: ^1.2.0
   latlong2: ^0.9.0
   geolocator: ^10.1.0
   geocode: ^1.0.3
-  rename: ^2.1.1
   flutter_cache_manager: ^3.3.1
   http: ^1.1.0
   animate_do: ^3.0.2
   coupon_uikit: ^0.2.0
   rxdart: ^0.27.7
-  cloud_firestore: ^4.8.5
+  cloud_firestore: ^4.15.5
   fluttertoast: ^8.2.4
   app_settings: ^5.0.0
   permission_handler: ^11.0.1
@@ -75,12 +74,15 @@ dev_dependencies:
   json_serializable: ^6.7.1
   mockito: ^5.4.1
   freezed: ^2.3.5
-  stacked_generator: ^1.4.0
+  stacked_generator: ^1.5.1
   hive_generator: ^2.0.0
   reactive_forms_generator: ^4.0.0
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+
+dependency_overrides:
+  logger: ^2.1.0
 
 flutter:
   assets:
