--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   scaled_app: ^2.0.0
   flutter_map: ^6.1.0
   flutter_map_dragmarker: ^6.0.0
+  flutter_map_cancellable_tile_provider: ^2.0.0
   loader_overlay: ^4.0.0
   flutter_map_animations: ^0.5.3
   custom_map_markers: ^0.0.2+1
