--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,79 +11,94 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  supabase_flutter: ^2.0.2
-  firebase_core: ^2.25.4
-  firebase_auth: ^4.17.5
-  carousel_slider: ^4.2.1
-  faker: ^2.1.0
-  url_strategy: ^0.2.0
-  badges: ^3.1.1
-  another_transformer_page_view: ^2.0.1
-  smooth_page_indicator: ^1.1.0
+
+  #MODELS
   collection: ^1.17.0
   freezed_annotation: ^2.0.3
   json_annotation: ^4.8.1
+
+  #DATABASE/API
+  supabase_flutter: ^2.0.2
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.5
+  firebase_storage: ^11.5.6
+  firebase_cached_image: ^0.5.3
+  cloud_firestore: ^4.15.5
+  http: ^1.1.0
+
+  #STATE MANAGEMENT
   stacked: ^3.4.1
   stacked_services: ^1.2.0
   stacked_themes: ^0.3.12
+  rxdart: ^0.27.7
+  dartz: ^0.10.1
+  flutter_hooks: ^0.20.1
+
+  #FORMS
   reactive_forms: ^16.0.2
   reactive_date_time_picker: ^3.0.0
   reactive_forms_annotations: ^4.0.0
+
+  #WIDGETS
+  carousel_slider: ^4.2.1
+  cached_network_image: ^3.2.0
+  badges: ^3.1.1
+  loader_overlay: ^4.0.0
+  sliding_up_panel: ^2.0.0+1
+
+  #STORAGE
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  google_fonts: ^6.1.0
-  intl: ^0.18.0
-  uuid: ^4.2.1
-  responsive_builder: ^0.7.0
+  shared_preferences: ^2.2.2
+  flutter_cache_manager: ^3.3.1
+
+  #ANIMATIONS
+  another_transformer_page_view: ^2.0.1
+  animate_do: ^3.0.2
   flutter_animate: ^4.2.0+1
-  cached_network_image: ^3.2.0
+  smooth_page_indicator: ^1.1.0
+  animations: ^2.0.8
+
+  #NOTIFICATIONS
+  fluttertoast: ^8.2.4
+
+  #WEB
+  url_strategy: ^0.2.0
+  responsive_builder: ^0.7.0
+
+  #MOBILE
+  app_settings: ^5.0.0
+  permission_handler: ^11.0.1
   flutter_native_splash: ^2.3.7
   flutter_launcher_icons: ^0.13.1
-  dartz: ^0.10.1
-  scaled_app: ^2.0.0
-  flutter_map: ^6.1.0
-  flutter_map_dragmarker: ^6.0.0
-  flutter_map_cancellable_tile_provider: ^2.0.0
-  loader_overlay: ^4.0.0
-  flutter_map_animations: ^0.5.3
-  custom_map_markers: ^0.0.2+1
-  flutter_map_marker_cluster: ^1.2.0
+
+  #MAP
+  geoflutterfire2: ^2.3.15
   latlong2: ^0.9.0
   geolocator: ^10.1.0
   geocode: ^1.0.3
-  flutter_cache_manager: ^3.3.1
-  http: ^1.1.0
-  animate_do: ^3.0.2
-  coupon_uikit: ^0.2.0
-  rxdart: ^0.27.7
-  cloud_firestore: ^4.15.5
-  fluttertoast: ^8.2.4
-  app_settings: ^5.0.0
-  permission_handler: ^11.0.1
-  sliding_up_panel: ^2.0.0+1
-  geoflutterfire2: ^2.3.15
-  flutter_hooks: ^0.20.1
+
+  # HELPERS
+  google_fonts: ^6.1.0
+  intl: ^0.18.0
+  uuid: ^4.2.1
+  faker: ^2.1.0
   money2: ^4.0.0
-  shared_preferences: ^2.2.2
-  animations: ^2.0.8
-  fpdart: ^1.1.0
-  firebase_storage: ^11.5.6
-  firebase_cached_image: ^0.5.3
 
 dev_dependencies:
   build_runner: ^2.4.5
   json_serializable: ^6.7.1
   mockito: ^5.4.1
   freezed: ^2.3.5
-  stacked_generator: ^1.5.1
+  stacked_generator: ^1.6.0
   hive_generator: ^2.0.0
   reactive_forms_generator: ^4.0.0
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
 
-dependency_overrides:
-  logger: ^2.1.0
+#dependency_overrides:
+# logger: ^2.0.2+1
 
 flutter:
   assets:
