--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   badges: ^3.1.1
   loader_overlay: ^4.0.0
   sliding_up_panel: ^2.0.0+1
+  shimmer: ^3.0.0
 
   #STORAGE
   hive: ^2.2.3
