--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   stacked_services: ^1.2.0
   stacked_themes: ^0.3.12
   stacked_firebase_auth: ^2.20.0
-  stacked_hooks: ^0.2.3
+  flutter_hooks: ^0.21.0
   rxdart: ^0.27.7
   dartz: ^0.10.1
 
